; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/storage/file/extr_fd.c_RegisterTemporaryFile.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/storage/file/extr_fd.c_RegisterTemporaryFile.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }

@CurrentResourceOwner = common dso_local global i32 0, align 4
@VfdCache = common dso_local global %struct.TYPE_2__* null, align 8
@FD_CLOSE_AT_EOXACT = common dso_local global i32 0, align 4
@have_xact_temporary_files = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64)* @RegisterTemporaryFile to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @RegisterTemporaryFile(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i32, i32* @CurrentResourceOwner, align 4
  %4 = load i64, i64* %2, align 8
  %5 = call i32 @ResourceOwnerRememberFile(i32 %3, i64 %4)
  %6 = load i32, i32* @CurrentResourceOwner, align 4
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** @VfdCache, align 8
  %8 = load i64, i64* %2, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i64 %8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 1
  store i32 %6, i32* %10, align 4
  %11 = load i32, i32* @FD_CLOSE_AT_EOXACT, align 4
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** @VfdCache, align 8
  %13 = load i64, i64* %2, align 8
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i64 %13
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = or i32 %16, %11
  store i32 %17, i32* %15, align 4
  store i32 1, i32* @have_xact_temporary_files, align 4
  ret void
}

declare dso_local i32 @ResourceOwnerRememberFile(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
